2014-01-17  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: fixed the check for WebM-compatible track types
        for Opus.

2014-01-12  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: fixed muxing Sorenson v3 (SVQ3) video from
        QuickTime files.

2014-01-11  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge, mkvextract, mkvpropedit: enhancement: attachments in
        Matroska files with a missing FileUID element are not ignored
        anymore even though they violate the specs. mkvmerge generates a
        new FileUID instead.

2014-01-10  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: re-built with the 64bit build for Windows with a newer
        compiler version in order to fix #957. It was due to a bug in gcc:
        http://gcc.gnu.org/bugzilla/show_bug.cgi?id=56742

        * mmg: bug fix: mkvmerge's file identification is written to a
        temporary file with --redirect-output and from there into mmg
        instead of directly from mkvmerge. This prevents from character
        re-coding done by wxWidgets 3.0.0 on Windows. Fixes #959.

2014-01-09  Moritz Bunkus  <moritz@bunkus.org>

        * installer: enhancement: the architecture (32bit vs 64bit) is
        mentioned in the interface.

        * installer: bug fix: the installation directory for 64bit builds
        will default to the proper directory (»C:\Program Files« instead
        of »C:\Program Files (x86)«). Fixes #956.

2014-01-08  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.7.0.

        * build system: Ruby 1.9.x is now required.

2014-01-05  Moritz Bunkus  <moritz@bunkus.org>

        * all: enhancement: The architecture (32bit/64bit) is mentioned in
        the version information of all programs.

2014-01-02  Moritz Bunkus  <moritz@bunkus.org>

        * build system: bug fix for 64bit builds on Windows
        (x86_64-w64-mingw32): use the correct processor architecture via