@@ -136,7 +136,7 @@ extract_attachments(const std::string &file_name,
   // open input file
   try {
     analyzer = kax_analyzer_cptr(new kax_analyzer_c(file_name));
-    if (!analyzer->process(parse_mode, MODE_READ))
+    if (!analyzer->process(parse_mode, MODE_READ, true))
       throw false;
   } catch (mtx::mm_io::exception &ex) {
     show_error(boost::format(Y("The file '%1%' could not be opened for reading: %2%.\n")) % file_name % ex);
